--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
   <title>Restaurant Website</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
   <!-- Scripts with defer -->
@@ -14,7 +14,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" defer></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" defer></script>
   <script src="https://unpkg.com/leaflet/dist/leaflet.js" defer></script>
-  <script src="./js/script.js" defer></script>
+  <script src="js/script.js" defer></script>
 </head>
 
 <body>
